# conform

./: .gitignore  README.md  package-lock.json  package.json
backend/: add_gitignores.py  conform.db  package-lock.json  package.json  pdf_utils.py  pyproject.toml  requirements.txt  server.py  setup.sh  tailwind_style_guide.js  test.py
backend/chains/: chain1.py  chain2.py  chain3.py  utils.py
backend/html_outputs/: .gitignore  consent-for-sterilization-english-2025.html
backend/html_outputs/Piedmont_Healthcare/: .gitignore
backend/test_files/: filled_consent-for-sterilization-english-2025.html  sterilization_template.html
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Carousel.css  Carousel.jsx  Dashboard.css  Dashboard.jsx  EditProfile.css  EditProfile.jsx  Footer.jsx  FormEditor.css  FormEditor.jsx  FormFieldNavigator.css  FormFieldNavigator.jsx  LoadingOverlay.css  LoadingOverlay.jsx  Login.css  Login.jsx  Sidebar.css  Sidebar.jsx  SignUp.css  SignUp.jsx
frontend/src/data/: hospitalSystems.js
frontend/src/form_components/: FormComponents.css  radial_input.jsx  text_input.jsx
frontend/src/utils/: scrollUtils.js
skibi_files/: chain1.py
