[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "langchain-anthropic>=0.3.10",
    "langchain[google-vertexai]>=0.3.20",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
